added portfolio project details and styled page titles

--- a/index.html
+++ b/index.html
@@ -146,7 +146,15 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h3 class="modal-title" id="myModalLabel">Digest of Homes</h3>
+                    <h2 class="modal-title" id="myModalLabel">Digest of Homes</h2>
+                    <div class="project--details">
+                        <p><span>for: </span>freelance</p>
+                        <p><span>role: </span>design and code</p>
+                        <p><span>tech: </span>html/css, bootstrap 3</p>
+                        <p><span>cms: </span>none</p>
+                        <p><span>status: </span>in progress</p>
+                        <p><span>url (preview): </span><a href="https://github.com/rlargett/digest-of-homes" target="_blank">github.com/rlargett/digest-of-homes</a></p>
+                    </div>
                 </div>
                 <div class="modal-body">
                     <img src="img/home-v02.1.jpg" class="img-responsive" alt="">
@@ -162,18 +170,26 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h3 class="modal-title" id="myModalLabel">Dylans RV</h3>
+                    <h2 class="modal-title" id="myModalLabel">Dylans RV</h2>
+                    <div class="project--details">
+                        <p><span>for: </span>NetSource Technologies</p>
+                        <p><span>role: </span>design and code</p>
+                        <p><span>tech: </span>html/css, bootstrap 3, jQuery</p>
+                        <p><span>cms: </span>SiteSource (propriatary)</p>
+                        <p><span>status: </span>archived</p>
+                        <!-- <p><span>url (preview): </span><a href="https://github.com/rlargett/digest-of-homes" target="_blank">github.com/rlargett/digest-of-homes</a></p> -->
+                    </div>
                 </div>
                 <div class="modal-body">
-                    <h4>Home Page</h4>
+                    <h3><span>Home Page</span></h3>
                     <p><img src="img/dylans-rv-home.jpg" class="img-responsive" alt=""></p>
-                    <h4>Mega Dropdown Menu</h4>
+                    <h3><span>Mega Dropdown Menu</span></h3>
                     <p><img src="img/dylans-rv-dropdown.jpg" class="img-responsive" alt=""></p>
-                    <h4>Mega Dropdown Menu: Hover Effect</h4>
+                    <h3><span>Mega Dropdown Menu: Hover Effect</span></h3>
                     <p><img src="img/dylans-rv-dropdown-hover.jpg" class="img-responsive" alt=""></p>
-                    <h4>Inventory List</h4>
+                    <h3><span>Inventory List</span></h3>
                     <p><img src="img/dylans-rv-inventory-list.jpg" class="img-responsive" alt=""></p>
-                    <h4>Inventory Detail</h4>
+                    <h3><span>Inventory Detail</span></h3>
                     <p><img src="img/dylans-rv-inventory-detail.jpg" class="img-responsive" alt=""></p>
                 </div>
                 <div class="modal-footer">
@@ -187,16 +203,24 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h3 class="modal-title" id="myModalLabel">Deltona Realty of Winter Haven</h3>
+                    <h2 class="modal-title" id="myModalLabel">Deltona Realty of Winter Haven</h2>
+                    <div class="project--details">
+                        <p><span>for: </span>NetSource Technologies</p>
+                        <p><span>role: </span>design and code</p>
+                        <p><span>tech: </span>html/css</p>
+                        <p><span>cms: </span>Wordpress</p>
+                        <p><span>status: </span>archived</p>
+                        <!-- <p><span>url (preview): </span><a href="https://github.com/rlargett/digest-of-homes" target="_blank">github.com/rlargett/digest-of-homes</a></p> -->
+                    </div>
                 </div>
                 <div class="modal-body">
-                    <h4>Home Page</h4>
+                    <h3><span>Home Page</span></h3>
                     <p><img src="img/deltona-realty-winter-haven-home.jpeg" class="img-responsive" alt=""></p>
-                    <h4>Dropdown Menu</h4>
+                    <h3><span>Dropdown Menu</span></h3>
                     <p><img src="img/deltona-realty-winter-haven-dropdown.jpeg" class="img-responsive" alt=""></p>
-                    <h4>Inner Page</h4>
+                    <h3><span>Inner Page</span></h3>
                     <p><img src="img/deltona-realty-winter-haven-inner.jpeg" class="img-responsive" alt=""></p>
-                    <h4>Listings Page</h4>
+                    <h3><span>Listings Page</span></h3>
                     <p><img src="img/deltona-realty-winter-haven-listings.jpeg" class="img-responsive" alt=""></p>
                 </div>
                 <div class="modal-footer">
@@ -210,7 +234,15 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h3 class="modal-title" id="myModalLabel">Moneco Advisors</h3>
+                    <h2 class="modal-title" id="myModalLabel">Moneco Advisors</h2>
+                    <div class="project--details">
+                        <p><span>for: </span>Platinum Strategies</p>
+                        <p><span>role: </span>design and code (customized theme)</p>
+                        <p><span>tech: </span>html/css, bootstrap 3</p>
+                        <p><span>cms: </span>FMG Suites</p>
+                        <p><span>status: </span>live</p>
+                        <p><span>url: </span><a href="http://www.monecoadvisors.com" target="_blank">www.monecoadvisors.com</a></p>
+                    </div>
                 </div>
                 <div class="modal-body">
                     <img src="img/moneco-homepage.jpeg" class="img-responsive" alt="">
