updated footer text

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     <footer>
       <div class="container">
         <div class="row">
-          <p>Built with <a href="http://sass-lang.com/" target="_blank">SASS</a>, <a href="https://prepros.io/" target="_blank">Prepros</a>, <a href="http://getbootstrap.com/" target="_blank">Bootstrap 3</a>, <a href="https://formspree.io/" target="_blank">Formspree</a> and hosted on <a href="https://pages.github.com/" target="_blank">Github Pages</a>.</p>
+          <p>Built with HTML, SASS, Bootstrap 3, and jQuery. Compiled with Prepros. Form submissions handeled with Formspree. Hosted on Github Pages.</p>
         </div>
       </div>
     </footer>
@@ -150,7 +150,7 @@
                     <div class="project--details">
                         <p><span>for: </span>freelance</p>
                         <p><span>role: </span>design and code</p>
-                        <p><span>tech: </span>html/css, bootstrap 3</p>
+                        <p><span>tech: </span>html/css, bootstrap 3, pug/jade</p>
                         <p><span>cms: </span>none</p>
                         <p><span>status: </span>in progress</p>
                         <p><span>url (preview): </span><a href="https://github.com/rlargett/digest-of-homes" target="_blank">github.com/rlargett/digest-of-homes</a></p>
