--- a/index.html
+++ b/index.html
@@ -9,16 +9,22 @@
     <link rel="stylesheet" href="./css/bootstrap.css" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Cinzel:400,700|Open+Sans+Condensed:300,300i,700" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
+    <script src="https://use.fontawesome.com/30e91f3589.js"></script>
 </head>
 
 <body>
     <div class="wrapper">
-        <div class="header"></div>
-        <div class="portrait"></div>
-        <h1>Ron Largett Jr</h1>
-        <!-- <p><a href="./pdf/resume.pdf" class="btn btn-primary" target="_blank">My Resume</a></p> -->
-        <p>Welcome to my portfolio website.</p>
-        <div class="experience">
+        <header>
+            <div class="col-md-6 col-md-offset-6 welcome">
+                <div class="portrait"></div>
+                <h1><small>My name is</small>Ron Largett Jr</h1>
+                <hr>
+                <p>I'm a Web Designer and aspiring Front-End Developer. I've been building websites since 2003 when table-layouts were a thing. Since then I've taught myself HTML5/CSS3. Within the past year I have also learned jQuery and I'm currently learning vanilla Javascript and AngularJS.</p>
+                <p><a href="./pdf/resume.pdf" class="btn btn-primary" target="_blank">Download My Resume</a></p>
+                <p><a href="#experience" title="See More"><i class="fa fa-chevron-down"></i></a></p>
+            </div>
+        </header>
+        <div class="experience" id="experience">
             <h2>My Experience</h2>
             <div class="experience--bg container-fluid">
                 <div class="experience--wrapper">
