corrected portfolio link and misspelling in footer

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     <footer>
       <div class="container">
         <div class="row">
-          <p>Built with HTML, SASS, Bootstrap 3, and jQuery. Compiled with Prepros. Form submissions handeled with Formspree. Hosted on Github Pages.</p>
+          <p>Built with HTML, SASS, Bootstrap 3, and jQuery. Compiled with Prepros. Form submissions handled with Formspree. Hosted on Github Pages.</p>
         </div>
       </div>
     </footer>
@@ -160,7 +160,7 @@
                         <p><span>tech: </span>html/css, bootstrap 3, pug/jade</p>
                         <p><span>cms: </span>none</p>
                         <p><span>status: </span>in progress</p>
-                        <p><span>url (preview): </span><a href="https://github.com/rlargett/digest-of-homes" target="_blank">github.com/rlargett/digest-of-homes</a></p>
+                        <p><span>url (preview): </span><a href="https://rlargett.github.io/digest-of-homes/" target="_blank">rlargett.github.io/digest-of-homes/</a></p>
                     </div>
                 </div>
                 <div class="modal-body">
