--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                             <h3>Platinum Strategies<small>03/2015 - current</small></h3>
                         </div>
                         <div class="body">
-                            <h4>Senior Web Designer</h4>
+                            <h4>Senior Web Developer</h4>
                             <ul>
                                 <li>Design and code multiple financial advisor's websites</li>
                                 <li>Troubleshoot and rework design workflow</li>
@@ -64,7 +64,6 @@
                                 <li>Design, code and manage multiple church websites</li>
                                 <li>Design ministry banners, brochures, flyers and logos</li>
                                 <li>Edit and upload audio files for weekly podcast</li>
-                                <li>Record staff training videos for website maintenance</li>
                             </ul>
                         </div>
                     </div>
