update intro text

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <div class="portrait"></div>
                 <h1><small>My name is</small>Ron Largett Jr</h1>
                 <hr>
-                <p>I'm a Web Designer / Developer. I've been building websites since 2003 when table-layouts were a thing. I love learning new web technologies and applying them to my design and coding skills.</p>
+                <p>I'm a Web Designer and Front End Developer. I've been building websites since 2003 when table-layouts were a thing. I love learning new web technologies and applying them to my design and coding skills.</p>
                 <p><a href="./pdf/resume.pdf" class="btn btn-primary" target="_blank">Download My Resume</a></p>
                 <p><a href="#experience" title="See More"><i class="fa fa-chevron-down"></i></a></p>
             </div>
