--- a/index.html
+++ b/index.html
@@ -31,7 +31,20 @@
                 <div class="experience--wrapper">
                     <div class="experience--card">
                         <div class="head">
-                            <h3>Platinum Strategies<small>03/2015 - current</small></h3>
+                            <h3>RealTruck<small>11/2017 - current</small></h3>
+                        </div>
+                        <div class="body">
+                            <h4>Front End Developer</h4>
+                            <ul>
+                                <li>Collaborate with Front End team to develop and code next gen checkout process and my account system </li>
+                                <li>Assist in research and development of styling/theming standards for main and brand websites </li>
+                                <li>Other front end dev tasks as assigned</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="experience--card">
+                        <div class="head">
+                            <h3>Platinum Strategies<small>03/2015 - 08/2017</small></h3>
                         </div>
                         <div class="body">
                             <h4>Senior Web Developer</h4>
