add pace edwards to portfolio

--- a/index.html
+++ b/index.html
@@ -87,6 +87,16 @@
             <h2>My Portfolio</h2>
             <div class="row">
                 <div class="col-xs-12 col-md-6 portfolio--thumb">
+                    <a href="#portfolioPaceEdwards" class="portfolio--link" data-toggle="modal">
+                        <div class="portfolio--caption">
+                            <div class="portfolio--caption--content">
+                                <h3>Pace Edwards</h3>
+                            </div>
+                        </div>
+                        <img src="img/pace-edwards.jpg" class="img-responsive">
+                    </a>
+                </div>
+                <div class="col-xs-12 col-md-6 portfolio--thumb">
                     <a href="#portfolioDigestOfHomes" class="portfolio--link" data-toggle="modal">
                         <div class="portfolio--caption">
                             <div class="portfolio--caption--content">
@@ -160,6 +170,43 @@
       </div>
     </footer>
     <!-- Modal -->
+    <div class="modal fade" id="portfolioPaceEdwards" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h2 class="modal-title" id="myModalLabel">Pace Edwards</h2>
+                    <div class="project--details">
+                        <p><span>for: </span>RealTruck</p>
+                        <p><span>role: </span>theming/styling, code collaboration</p>
+                        <p><span>tech: </span>html/css, bulma, pug, stylus, vue</p>
+                        <p><span>cms: </span>none</p>
+                        <p><span>status: </span>in progress</p>
+                        <p><span>url (preview): </span><a href="https://beta.paceedwardsdirect.com/" target="_blank">beta.paceedwardsdirect.com</a></p>
+                    </div>
+                </div>
+                <div class="modal-body">
+                    <h3><span>Desktop: Home Page</span></h3>
+                    <p><img src="img/ped-home.png" class="img-responsive" alt=""></p>
+                    <h3><span>Desktop: Product Page</span></h3>
+                    <p><img src="img/ped-product.png" class="img-responsive" alt=""></p>
+                    <h3><span>Desktop: Manage Account Page</span></h3>
+                    <p><img src="img/ped-manage-account.png" class="img-responsive" alt=""></p>
+                    <h3><span>Mobile: Home Page</span></h3>
+                    <p><img src="img/ped-mobile-home.jpg" class="img-responsive project--img--mobile" alt=""></p>
+                    <h3><span>Mobile: Product Page</span></h3>
+                    <p><img src="img/ped-mobile-product.jpg" class="img-responsive project--img--mobile" alt=""></p>
+                    <h3><span>Mobile: Login Page</span></h3>
+                    <p><img src="img/ped-mobile-login.png" class="img-responsive project--img--mobile" alt=""></p>
+                    <h3><span>Mobile: Manage Account Page</span></h3>
+                    <p><img src="img/ped-mobile-manage-account.png" class="img-responsive project--img--mobile" alt=""></p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="modal fade" id="portfolioDigestOfHomes" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
