--- a/index.html
+++ b/index.html
@@ -97,6 +97,16 @@
                     </a>
                 </div>
                 <div class="col-xs-12 col-md-6 portfolio--thumb">
+                    <a href="#portfolioRealTruck" class="portfolio--link" data-toggle="modal">
+                        <div class="portfolio--caption">
+                            <div class="portfolio--caption--content">
+                                <h3>RealTruck</h3>
+                            </div>
+                        </div>
+                        <img src="img/realtruck.png" class="img-responsive">
+                    </a>
+                </div>
+                <div class="col-xs-12 col-md-6 portfolio--thumb">
                     <a href="#portfolioDigestOfHomes" class="portfolio--link" data-toggle="modal">
                         <div class="portfolio--caption">
                             <div class="portfolio--caption--content">
@@ -179,7 +189,7 @@
                     <div class="project--details">
                         <p><span>for: </span>RealTruck</p>
                         <p><span>role: </span>theming/styling, code collaboration</p>
-                        <p><span>tech: </span>html/css, bulma, pug, stylus, vue</p>
+                        <p><span>tech: </span>html/css, bulma, pug, stylus, vue, javascript</p>
                         <p><span>cms: </span>none</p>
                         <p><span>status: </span>in progress</p>
                         <p><span>url (preview): </span><a href="https://beta.paceedwardsdirect.com/" target="_blank">beta.paceedwardsdirect.com</a></p>
@@ -200,6 +210,45 @@
                     <p><img src="img/ped-mobile-login.png" class="img-responsive project--img--mobile" alt=""></p>
                     <h3><span>Mobile: Manage Account Page</span></h3>
                     <p><img src="img/ped-mobile-manage-account.png" class="img-responsive project--img--mobile" alt=""></p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="portfolioRealTruck" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h2 class="modal-title" id="myModalLabel">RealTruck</h2>
+                    <div class="project--details">
+                        <p><span>for: </span>RealTruck</p>
+                        <p><span>role: </span>styling and code collaboration</p>
+                        <p><span>tech: </span>html/css, vue, javascript</p>
+                        <p><span>cms: </span>none</p>
+                        <p><span>status: </span>live</p>
+                        <p><span>url: </span><a href="https://realtruck.com/" target="_blank">realtruck.com</a></p>
+                    </div>
+                </div>
+                <div class="modal-body">
+                    <h3><span>Desktop: Shopping Cart Page</span></h3>
+                    <p><img src="img/realtruck-cart.png" class="img-responsive" alt=""></p>
+                    <h3><span>Desktop: Shipping Page</span></h3>
+                    <p><img src="img/realtruck-shipping.png" class="img-responsive" alt=""></p>
+                    <h3><span>Desktop: Checkout Page</span></h3>
+                    <p><img src="img/realtruck-checkout.png" class="img-responsive" alt=""></p>
+                    <h3><span>Desktop: Receipt Page</span></h3>
+                    <p><img src="img/realtruck-receipt.png" class="img-responsive" alt=""></p>
+                    <h3><span>Desktop: Print Receipt Modal</span></h3>
+                    <p><img src="img/realtruck-print-receipt.png" class="img-responsive" alt=""></p>
+                    <h3><span>Mobile: Shopping Cart Page</span></h3>
+                    <p><img src="img/realtruck-mobile-cart.png" class="img-responsive project--img--mobile" alt=""></p>
+                    <h3><span>Mobile: Shipping Page</span></h3>
+                    <p><img src="img/realtruck-mobile-shipping.png" class="img-responsive project--img--mobile" alt=""></p>
+                    <h3><span>Mobile: Checkout Page</span></h3>
+                    <p><img src="img/realtruck-mobile-checkout.png" class="img-responsive project--img--mobile" alt=""></p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
